@startuml

title __INHERITANCE's Class Diagram__\n

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Animal {
        # name : String
        # eat()
        # sleep()
        ~ Animal()
        ~ Animal()
    }
  }
  

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Bird {
        + fly()
        ~ Bird()
    }
  }
  

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Cat {
        + bark()
        ~ Cat()
    }
  }
  

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Chicken {
        + fly()
        ~ Chicken()
    }
  }
  

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Dog {
        + bark()
        ~ Dog()
    }
  }
  

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Fish {
        + swim()
        ~ Fish()
    }
  }
  

  namespace com.ion.training.oops.inheritance {
    class com.ion.training.oops.inheritance.Zoo {
        {static} + main()
    }
  }
  

  com.ion.training.oops.inheritance.Bird -up-|> com.ion.training.oops.inheritance.Animal
  com.ion.training.oops.inheritance.Cat -up-|> com.ion.training.oops.inheritance.Animal
  com.ion.training.oops.inheritance.Chicken -up-|> com.ion.training.oops.inheritance.Bird
  com.ion.training.oops.inheritance.Dog -up-|> com.ion.training.oops.inheritance.Animal
  com.ion.training.oops.inheritance.Fish -up-|> com.ion.training.oops.inheritance.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
